# gha-echo-output

./: Cargo.toml  README.md
src/: main.rs
