[package]
name = "gha-echo-output"
version = "0.1.0"
authors = ["Edward George <edwardgeorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo-output"
test = false
bench = false
path = "src/main.rs"

[dependencies]
clap = "2.33.3"